<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="380dp"
        android:layout_height="350dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/photo"
        android:src="@android:drawable/ic_menu_crop"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/description"
        android:layout_width="380dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descripcion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/takePhoto"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/tomar_foto"
        app:layout_constraintBottom_toTopOf="@+id/selectPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/savePhoto"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#CDDC39"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/selectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="52dp"
        android:text="@string/seleccionar_foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>