<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateNote">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/title"
            android:layout_width="380dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="23dp"
            android:hint="@string/titulo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="2"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="36dp"
            android:clickable="true"
            android:contentDescription="@string/clip"
            android:focusable="true"
            android:src="@drawable/clip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="#CDDC39"
            android:text="@string/guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="#FF5722"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/save"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/description"
            android:layout_width="382dp"
            android:layout_height="200dp"
            android:layout_marginTop="120dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/descripcion"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>