<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateTask">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/titleTask"
            android:layout_width="380dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="23dp"
            android:hint="@string/titulo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="2"
            app:layout_constraintBottom_toTopOf="@+id/descriptionTask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="36dp"
            android:clickable="true"
            android:contentDescription="@string/clip"
            android:focusable="true"
            android:src="@drawable/clip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/saveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="#CDDC39"
            android:text="@string/guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/cancelTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="#FF5722"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/saveTask"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/descriptionTask"
            android:layout_width="382dp"
            android:layout_height="0dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="43dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/descripcion"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="34dp"
            android:text="@string/fecha"
            app:layout_constraintBottom_toTopOf="@+id/hour"
            app:layout_constraintEnd_toStartOf="@+id/txtDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTask" />

        <Button
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="238dp"
            android:text="@string/hora"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtHour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="@+id/date"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hour"
            app:layout_constraintTop_toTopOf="@+id/hour"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>