<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120sp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="370sp"
        android:layout_height="95dp"
        android:layout_margin="10sp"
        android:elevation="5sp"
        app:cardBackgroundColor="#FDDBE7"
        app:cardCornerRadius="15sp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100sp">

            <ImageView
                android:id="@+id/delete"
                android:layout_width="28sp"
                android:layout_height="28sp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="22dp"
                android:contentDescription="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/delete" />

            <TextView
                android:id="@+id/txtTipo"
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="1dp"
                android:maxLength="40"
                android:paddingStart="10sp"
                android:paddingLeft="10sp"
                android:paddingTop="10sp"
                android:paddingEnd="10sp"
                android:paddingRight="10sp"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/edit"
                android:layout_width="30sp"
                android:layout_height="32sp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="22dp"
                android:contentDescription="@string/edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/edit" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:maxLength="80"
                android:paddingStart="10sp"
                android:paddingLeft="10sp"
                android:paddingTop="5sp"
                android:paddingEnd="10sp"
                android:paddingRight="10sp"
                android:paddingBottom="5sp"
                android:text="@string/titulo"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/txtDescripcion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTipo" />

            <TextView
                android:id="@+id/txtDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="15dp"
                android:maxLength="80"
                android:paddingStart="10sp"
                android:paddingLeft="10sp"
                android:paddingTop="5sp"
                android:paddingEnd="10sp"
                android:paddingRight="10sp"
                android:paddingBottom="5sp"
                android:text="@string/descripcion"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>